restore 1997 prediction. Do some code optimization replacing divisions with shifts and luts

--- a/refs/calic/README
+++ b/refs/calic/README
@@ -1,6 +1,6 @@
 ## Modifications included in this fork
 - Some support to near-lossless compression (the near paramenter is not yet included in the compress image header, then it needs to be explicitly provided to the decoder. the impact in avg compression is negligible )
-
+- Some performance optimizations
 
 
 ## Original README
